@@ -307,19 +307,18 @@ GEXTEND Gram
 
   gallina_ext:
     [ [ (* Interactive module declaration *)
-	IDENT "Module"; id = identref; 
+        IDENT "Module"; export = export_token; id = identref; 
 	bl = LIST0 module_binder; mty_o = OPT of_module_type; 
 	mexpr_o = OPT is_module_expr ->
-	  VernacDefineModule (id, bl, mty_o, mexpr_o)
+	  VernacDefineModule (export, id, bl, mty_o, mexpr_o)
 	  
       | IDENT "Module"; "Type"; id = identref; 
 	bl = LIST0 module_binder; mty_o = OPT is_module_type ->
 	  VernacDeclareModuleType (id, bl, mty_o)
 	  
-      | IDENT "Declare"; IDENT "Module"; id = identref; 
-	bl = LIST0 module_binder; mty_o = OPT of_module_type; 
-	mexpr_o = OPT is_module_expr ->
-	  VernacDeclareModule (id, bl, mty_o, mexpr_o)
+      | IDENT "Declare"; IDENT "Module"; export = export_token; id = identref; 
+	bl = LIST0 module_binder; mty_o = of_module_type ->
+	  VernacDeclareModule (export, id, bl, mty_o)
       (* Section beginning *)
       | IDENT "Section"; id = identref -> VernacBeginSection id
       | IDENT "Chapter"; id = identref -> VernacBeginSection id
@@ -360,8 +359,8 @@ GEXTEND Gram
 
   (* Module binder  *)
   module_binder:
-    [ [ "("; idl = LIST1 identref; ":"; mty = module_type; ")" ->
-          (idl,mty) ] ]
+    [ [ "("; export = export_token; idl = LIST1 identref; ":";
+         mty = module_type; ")" -> (export,idl,mty) ] ]
   ;
 
   (* Module expressions *)
